--- a/README
+++ b/README
@@ -48,3 +48,6 @@ http://http://opentaxsolver.sourceforge.net/
 http://www.pdflabs.com/tools/pdftk-the-pdf-toolkit/
 http://www.myown1.com/linux/pdf_formfill.shtml
 http://www.irs.gov/pub/irs-prior/
+
+LICENSE:
+This code is released under the MIT license.
